remove nosysv cheat from all boot menus

--- a/iso-template/boot/grub/grub.cfg
+++ b/iso-template/boot/grub/grub.cfg
@@ -16,13 +16,13 @@ set menu_color_highlight=black/light-gray
 
 menuentry "custom-name-pae" {
 	set gfxpayload=keep
-	linux	/antiX/vmlinuz quiet nosysv=X
+	linux	/antiX/vmlinuz quiet 
 	initrd	/antiX/initrd.gz
 }
 
 menuentry "custom-name-non-pae" {
 	set gfxpayload=keep
-	linux	/antiX/vmlinuz1 quiet nosysv=X
+	linux	/antiX/vmlinuz1 quiet 
 	initrd	/antiX/initrd.gz
 }
 
@@ -34,6 +34,6 @@ menuentry "Failsafe" {
 
 menuentry "Custom Boot (with menus)" {
 	set gfxpayload=keep
-	linux	/antiX/vmlinuz quiet menus nosysv=X
+	linux	/antiX/vmlinuz quiet menus 
 	initrd	/antiX/initrd.gz
 }
