--- a/iso-template/boot/isolinux/isolinux.cfg
+++ b/iso-template/boot/isolinux/isolinux.cfg
@@ -8,13 +8,13 @@ MENU TITLE Welcome to MX-15 (Fusion)
 LABEL live
     MENU LABEL  custom-name
     KERNEL /antiX/vmlinuz
-    APPEND quiet nosysv=X
+    APPEND quiet 
     INITRD /antiX/initrd.gz
 
 LABEL live-no-pae
-    MENU LABEL  custom-name (non pae)
+    MENU LABEL custom-name  (non pae)
     KERNEL /antiX/vmlinuz1
-    APPEND quiet nosysv=X 
+    APPEND quiet 
     INITRD /antiX/initrd.gz
 
 LABEL harddisk
