revised translation files and desktop file for mx-snapshot

--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -9,18 +9,18 @@ Name[fr]=MX Snapshot
 Name[it]=MX Snapshot
 Name[ja]=MX Snapshot
 Name[nl]=MX Snapshot
-Name[ru]=MX Snapshot
+Name[ru]=MX Снимок системы
 Name[sv]=MX Snapshot
 Comment=Create a live iso snapshot of your running system.
-Comment[ca]=Crear una instantània ISO del sistema en execució
+Comment[ca]=Crea una instantània ISO del sistema en execució
 Comment[de]=Eine Live-iso Schnappschuss Ihres laufenden Systems erstellen.
 Comment[el]=Δημιουργήστε μια ζωντανή ISO στιγμιότυπο της λειτουργίας του συστήματός σας.
 Comment[es]=Crear una instantánea digital de su sistema activo
 Comment[fr]=Créer un iso live en direct de votre système en marche.
 Comment[it]=Creare una iso Live del tuo sistema attualmente in esecuzione
 Comment[ja]=実行中システムのライブ ISO スナップショットを生成します。
-Comment[nl]=Creeer een live iso snapshot van je werkende systeem
-Comment[ru]=Создание ISO со снимком живой системы из работающей системы
+Comment[nl]=Creëer een live iso snapshot van je werkende systeem
+Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sv]=Skapa ett live iso snapshot av det system du kör.
 Exec=su-to-root -X -c mx-snapshot
 Terminal=false
