--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,6 @@ Vcs-Git: git://github.com/AdrianTM/mx-snapshot
 
 Package: mx-snapshot
 Architecture: any
-Depends: ${misc:Depends}, ${shlibs:Depends}, mx-viewer, genisoimage, squashfs-tools, syslinux-utils, mx-remaster, iso-template
+Depends: ${misc:Depends}, ${shlibs:Depends}, mx-viewer, genisoimage, squashfs-tools, syslinux-utils, mx-remaster, iso-template (>= 16.1mx15)
 Description: MX Snapshot
  MX Snapshot is a tool used for creating a live-CD from the running system.
