sync translations for mx-snapshot

--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -9,6 +9,7 @@ Name[fr]=MX Snapshot
 Name[it]=MX Snapshot
 Name[ja]=MX Snapshot
 Name[nl]=MX Snapshot
+Name[pt]=MX_Criador de Imagens ISO
 Name[ru]=MX Снимок системы
 Name[sv]=MX Snapshot
 Comment=Create a live iso snapshot of your running system.
@@ -20,6 +21,7 @@ Comment[fr]=Créer un iso live en direct de votre système en marche.
 Comment[it]=Creare una iso Live del tuo sistema attualmente in esecuzione
 Comment[ja]=実行中システムのライブ ISO スナップショットを生成します。
 Comment[nl]=Creëer een live iso snapshot van je werkende systeem
+Comment[pt]=Para criar imagens ISO do sistema em execução como instalação externa.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sv]=Skapa ett live iso snapshot av det system du kör.
 Exec=su-to-root -X -c mx-snapshot
@@ -28,3 +30,4 @@ Type=Application
 Icon=mx-snapshot
 Categories=GNOME;GTK;System;MX-Live;
 NoDisplay=false
+
