Updated translations, .desktop and .pro, for mx-snapshot

--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -7,16 +7,26 @@ Name[cs]=MX Snapshot
 Name[de]=MX Snapshot
 Name[el]=MX Snapshot
 Name[es]=MX Snapshot
+Name[fi]=MX Tilannovedos
 Name[fr]=MX Snapshot
+Name[hi]=MX Snapshot
+Name[hr]=MX Snapshot
 Name[hu]=MX pillanatkép
 Name[it]=MX Snapshot
 Name[ja]=MX Snapshot
+Name[kk]=MX Snapshot
 Name[lt]=MX momentinė kopija
 Name[nl]=MX Snapshot
-Name[pt]=MX-Criar Imagens ISO
+Name[pl]=MX Snapshot
+Name[pt]=MX-Criar Imagem ISO
+Name[pt_BR]=MX Snapshot
+Name[ro]=MX Snapshot
 Name[ru]=MX Снимок системы
 Name[sk]=MX Snapshot
 Name[sv]=MX Snapshot
+Name[tr]=MX Snapshot
+Name[uk]=MX Snapshot
+Name[zh_TW]=MX 快照
 Comment=Create a live iso snapshot of your running system.
 Comment[am]=በ ቀጥታ የ iso መመልከቻ ፎቶ መፍጠሪያ በ እርስዎ ኮምፒዩተር ላይ የሚሄደውን ስርአት
 Comment[ca]=Crea una instantània ISO del sistema en execució
@@ -24,15 +34,26 @@ Comment[cs]=Vytvořte si LIVE ISO snapshot z Vašeho systému
 Comment[de]=Einen bootfähigen Live .ISO Schnappschuss Ihres laufenden Systems erstellen.
 Comment[el]=Δημιουργήστε μια ζωντανή ISO στιγμιότυπο της λειτουργίας του συστήματός σας.
 Comment[es]=Crear una instantánea digital de su sistema activo
+Comment[fi]=Create a live iso snapshot of your running system.
 Comment[fr]=Créer une image .iso de votre système actuel.
+Comment[hi]=Create a live iso snapshot of your running system.
+Comment[hr]=Create a live iso snapshot of your running system.
 Comment[hu]=Élő iso pillanatkép készítése a futó operációs rendszeredről
 Comment[it]=Creare una ISO Live del tuo sistema attualmente in esecuzione
 Comment[ja]=実行中システムのライブ ISO スナップショットを生成します。
+Comment[kk]=Create a live iso snapshot of your running system.
+Comment[lt]=Create a live iso snapshot of your running system.
 Comment[nl]=Creëer een live iso snapshot van je werkende systeem
-Comment[pt]=Para criar imagens ISO executáveis (do sistema em execução).
+Comment[pl]=Create a live iso snapshot of your running system.
+Comment[pt]=Criar imagem ISO (do sistema em execução), executável quando instalada em CD/DVD/USB [mx-snapshot]
+Comment[pt_BR]=Create a live iso snapshot of your running system.
+Comment[ro]=Create a live iso snapshot of your running system.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sk]=Vytvorte si LIVE ISO snapshot Vášho operačného systému
 Comment[sv]=Skapa ett live iso snapshot av det system du kör.
+Comment[tr]=Create a live iso snapshot of your running system.
+Comment[uk]=Create a live iso snapshot of your running system.
+Comment[zh_TW]=將本電腦上正在運行的系統做成現場版映像檔
 Exec=su-to-root -X -c mx-snapshot
 Terminal=false
 Type=Application
