--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -18,8 +18,8 @@ Name[kk]=MX Snapshot
 Name[lt]=MX momentinė kopija
 Name[nl]=MX Snapshot
 Name[pl]=MX Snapshot
+Name[pt_BR]=MX-Criar Imagem ISO
 Name[pt]=MX-Criar Imagem ISO
-Name[pt_BR]=MX Snapshot
 Name[ro]=MX Snapshot
 Name[ru]=MX Снимок системы
 Name[sk]=MX Snapshot
@@ -45,8 +45,8 @@ Comment[kk]=Create a live iso snapshot of your running system.
 Comment[lt]=Create a live iso snapshot of your running system.
 Comment[nl]=Creëer een live iso snapshot van je werkende systeem
 Comment[pl]=Create a live iso snapshot of your running system.
+Comment[pt_BR]=Criar imagem ISO (do sistema em execução), executável quando instalada em CD/DVD/USB [mx-snapshot]
 Comment[pt]=Criar imagem ISO (do sistema em execução), executável quando instalada em CD/DVD/USB [mx-snapshot]
-Comment[pt_BR]=Create a live iso snapshot of your running system.
 Comment[ro]=Create a live iso snapshot of your running system.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sk]=Vytvorte si LIVE ISO snapshot Vášho operačného systému
