--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -4,6 +4,7 @@ Name=MX Snapshot
 Name[am]=MX የ መመልከቻ ፎቶ
 Name[ca]=MX Snapshot
 Name[cs]=MX Snapshot
+Name[da]=MX Snapshot
 Name[de]=MX Snapshot
 Name[el]=MX Snapshot
 Name[es]=MX Snapshot
@@ -12,17 +13,19 @@ Name[fr]=MX Snapshot
 Name[hi]=MX Snapshot
 Name[hr]=MX Snapshot
 Name[hu]=MX pillanatkép
+Name[is]=MX Snapshot
 Name[it]=MX Snapshot
 Name[ja]=MX Snapshot
 Name[kk]=MX Snapshot
 Name[lt]=MX momentinė kopija
 Name[nl]=MX Snapshot
 Name[pl]=MX Snapshot
-Name[pt_BR]=MX-Criar Imagem ISO
+Name[pt_BR]=MX Snapshot
 Name[pt]=MX-Criar Imagem ISO
 Name[ro]=MX Snapshot
 Name[ru]=MX Снимок системы
 Name[sk]=MX Snapshot
+Name[sq]=MX Snapshot
 Name[sv]=MX Snapshot
 Name[tr]=MX Snapshot
 Name[uk]=MX Snapshot
@@ -31,6 +34,7 @@ Comment=Create a live iso snapshot of your running system.
 Comment[am]=በ ቀጥታ የ iso መመልከቻ ፎቶ መፍጠሪያ በ እርስዎ ኮምፒዩተር ላይ የሚሄደውን ስርአት
 Comment[ca]=Crea una instantània ISO del sistema en execució
 Comment[cs]=Vytvořte si LIVE ISO snapshot z Vašeho systému
+Comment[da]=Create a live iso snapshot of your running system.
 Comment[de]=Einen bootfähigen Live .ISO Schnappschuss Ihres laufenden Systems erstellen.
 Comment[el]=Δημιουργήστε μια ζωντανή ISO στιγμιότυπο της λειτουργίας του συστήματός σας.
 Comment[es]=Crear una instantánea digital de su sistema activo
@@ -39,6 +43,7 @@ Comment[fr]=Créer une image .iso de votre système actuel.
 Comment[hi]=Create a live iso snapshot of your running system.
 Comment[hr]=Create a live iso snapshot of your running system.
 Comment[hu]=Élő iso pillanatkép készítése a futó operációs rendszeredről
+Comment[is]=Create a live iso snapshot of your running system.
 Comment[it]=Creare una ISO Live del tuo sistema attualmente in esecuzione
 Comment[ja]=実行中システムのライブ ISO スナップショットを生成します。
 Comment[kk]=Create a live iso snapshot of your running system.
@@ -50,6 +55,7 @@ Comment[pt]=Criar imagem ISO (do sistema em execução), executável quando inst
 Comment[ro]=Create a live iso snapshot of your running system.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sk]=Vytvorte si LIVE ISO snapshot Vášho operačného systému
+Comment[sq]=Create a live iso snapshot of your running system.
 Comment[sv]=Skapa ett live iso snapshot av det system du kör.
 Comment[tr]=Create a live iso snapshot of your running system.
 Comment[uk]=Create a live iso snapshot of your running system.
