Translation refresh Jan 2019

--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -4,11 +4,11 @@ Name=MX Snapshot
 Name[am]=MX የ መመልከቻ ፎቶ
 Name[ca]=MX Snapshot
 Name[cs]=MX Snapshot
-Name[da]=MX Snapshot
+Name[da]=MX Øjebliksbillede
 Name[de]=MX Snapshot
 Name[el]=MX Snapshot
 Name[es]=MX Snapshot
-Name[fi]=MX Tilannovedos
+Name[fi]=MX Tilannevedos
 Name[fr]=MX Snapshot
 Name[hi]=MX Snapshot
 Name[hr]=MX Snapshot
@@ -34,8 +34,8 @@ Comment=Create a live iso snapshot of your running system.
 Comment[am]=በ ቀጥታ የ iso መመልከቻ ፎቶ መፍጠሪያ በ እርስዎ ኮምፒዩተር ላይ የሚሄደውን ስርአት
 Comment[ca]=Crea una instantània ISO del sistema en execució
 Comment[cs]=Vytvořte si LIVE ISO snapshot z Vašeho systému
-Comment[da]=Create a live iso snapshot of your running system.
-Comment[de]=Einen bootfähigen Live .ISO Schnappschuss Ihres laufenden Systems erstellen.
+Comment[da]=Opret et live-iso-øjeblikebillede af dit kørende system.
+Comment[de]=Erzeugen eines Schnappschusses Ihres laufenden Systems als bootfähige Live-ISO
 Comment[el]=Δημιουργήστε μια ζωντανή ISO στιγμιότυπο της λειτουργίας του συστήματός σας.
 Comment[es]=Crear una instantánea digital de su sistema activo
 Comment[fi]=Create a live iso snapshot of your running system.
@@ -51,7 +51,7 @@ Comment[lt]=Create a live iso snapshot of your running system.
 Comment[nl]=Creëer een live iso snapshot van je werkende systeem
 Comment[pl]=Create a live iso snapshot of your running system.
 Comment[pt_BR]=Criar imagem ISO (do sistema em execução), executável quando instalada em CD/DVD/USB [mx-snapshot]
-Comment[pt]=Criar imagem ISO (do sistema em execução), executável quando instalada em CD/DVD/USB [mx-snapshot]
+Comment[pt]=Criar imagem ISO do sistema em execução; quando instalada num meio externo (CD/DVD/USB) é executável directamente [mx-snapshot]
 Comment[ro]=Create a live iso snapshot of your running system.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sk]=Vytvorte si LIVE ISO snapshot Vášho operačného systému
