update debian build parameters

--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,6 @@
 #!/usr/bin/make -f
 
-QMAKE_OPTS = DEFINES+=NO_DEBUG_ON_CONSOLE
-MAKE_OPTS  = QMAKE=qmake-qt5 LRELEASE=lrelease-qt5 QMAKE_OPTS="$(QMAKE_OPTS)"
+export QT_SELECT=5
 
 override_dh_auto_clean:
 	dh_auto_clean
@@ -9,18 +8,11 @@ override_dh_auto_clean:
 
 override_dh_auto_build:
 	lrelease src.pro
-	dh_auto_build -- $(MAKE_OPTS)
+	dh_auto_build
 
-override_dh_auto_install:
-	dh_auto_install -- $(MAKE_OPTS)
-
-override_dh_builddeb:
-	dh_builddeb -- -Z xz
-
-override_dh_usrlocal:
-
+# Uncomment if building in Virtual Box
 override_dh_shlibdeps:
-	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
+	dh_shlibdeps -- -xvirtualbox-guest-x11 --ignore-missing-info
 
 %:
 	dh $@ --parallel 
