Translation refresh April 2019

--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -2,63 +2,91 @@
 Encoding=UTF-8
 Name=MX Snapshot
 Name[am]=MX የ መመልከቻ ፎቶ
+Name[ar]=MX Snapshot
+Name[bg]=MX Snapshot
 Name[ca]=MX Snapshot
 Name[cs]=MX Snapshot
 Name[da]=MX Øjebliksbillede
 Name[de]=MX Snapshot
 Name[el]=MX Snapshot
 Name[es]=MX Snapshot
+Name[et]=MX Snapshot
+Name[eu]=MX Snapshot
+Name[fa]=MX Snapshot
 Name[fi]=MX Tilannevedos
 Name[fr]=MX Snapshot
+Name[he_IL]=MX Snapshot
 Name[hi]=MX Snapshot
 Name[hr]=MX Snapshot
 Name[hu]=MX pillanatkép
+Name[id]=MX Snapshot
 Name[is]=MX Snapshot
 Name[it]=MX Snapshot
+Name[ja_JP]=MX Snapshot
 Name[ja]=MX Snapshot
 Name[kk]=MX Snapshot
+Name[ko]=MX Snapshot
 Name[lt]=MX momentinė kopija
+Name[mk]=MX Snapshot
+Name[nb]=MX Snapshot
 Name[nl]=MX Snapshot
-Name[pl]=MX Snapshot
+Name[pl]=MX Zrzut systemu
 Name[pt_BR]=MX Snapshot
 Name[pt]=MX-Criar Imagem ISO
 Name[ro]=MX Snapshot
 Name[ru]=MX Снимок системы
 Name[sk]=MX Snapshot
+Name[sl]=MX Snapshot
 Name[sq]=MX Snapshot
+Name[sr]=MX Snapshot
 Name[sv]=MX Snapshot
 Name[tr]=MX Snapshot
 Name[uk]=MX Snapshot
+Name[zh_CN]=MX Snapshot
 Name[zh_TW]=MX 快照
 Comment=Create a live iso snapshot of your running system.
 Comment[am]=በ ቀጥታ የ iso መመልከቻ ፎቶ መፍጠሪያ በ እርስዎ ኮምፒዩተር ላይ የሚሄደውን ስርአት
+Comment[ar]=Create a live iso snapshot of your running system.
+Comment[bg]=Create a live iso snapshot of your running system.
 Comment[ca]=Crea una instantània ISO del sistema en execució
 Comment[cs]=Vytvořte si LIVE ISO snapshot z Vašeho systému
 Comment[da]=Opret et live-iso-øjeblikebillede af dit kørende system.
 Comment[de]=Erzeugen eines Schnappschusses Ihres laufenden Systems als bootfähige Live-ISO
 Comment[el]=Δημιουργήστε μια ζωντανή ISO στιγμιότυπο της λειτουργίας του συστήματός σας.
 Comment[es]=Crear una instantánea digital de su sistema activo
+Comment[et]=Create a live iso snapshot of your running system.
+Comment[eu]=Create a live iso snapshot of your running system.
+Comment[fa]=Create a live iso snapshot of your running system.
 Comment[fi]=Create a live iso snapshot of your running system.
 Comment[fr]=Créer une image .iso de votre système actuel.
+Comment[he_IL]=Create a live iso snapshot of your running system.
 Comment[hi]=Create a live iso snapshot of your running system.
 Comment[hr]=Create a live iso snapshot of your running system.
 Comment[hu]=Élő iso pillanatkép készítése a futó operációs rendszeredről
+Comment[id]=Create a live iso snapshot of your running system.
 Comment[is]=Create a live iso snapshot of your running system.
 Comment[it]=Creare una ISO Live del tuo sistema attualmente in esecuzione
+Comment[ja_JP]=Create a live iso snapshot of your running system.
 Comment[ja]=実行中システムのライブ ISO スナップショットを生成します。
 Comment[kk]=Create a live iso snapshot of your running system.
+Comment[ko]=Create a live iso snapshot of your running system.
 Comment[lt]=Create a live iso snapshot of your running system.
+Comment[mk]=Create a live iso snapshot of your running system.
+Comment[nb]=Create a live iso snapshot of your running system.
 Comment[nl]=Creëer een live iso snapshot van je werkende systeem
-Comment[pl]=Create a live iso snapshot of your running system.
+Comment[pl]=Utwórz obraz ISO aktualnie uruchomionego systemu.
 Comment[pt_BR]=Criar imagem ISO (do sistema em execução), executável quando instalada em CD/DVD/USB [mx-snapshot]
 Comment[pt]=Criar imagem ISO do sistema em execução; quando instalada num meio externo (CD/DVD/USB) é executável directamente [mx-snapshot]
 Comment[ro]=Create a live iso snapshot of your running system.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sk]=Vytvorte si LIVE ISO snapshot Vášho operačného systému
+Comment[sl]=Create a live iso snapshot of your running system.
 Comment[sq]=Create a live iso snapshot of your running system.
+Comment[sr]=Create a live iso snapshot of your running system.
 Comment[sv]=Skapa ett live iso snapshot av det system du kör.
 Comment[tr]=Create a live iso snapshot of your running system.
 Comment[uk]=Create a live iso snapshot of your running system.
+Comment[zh_CN]=Create a live iso snapshot of your running system.
 Comment[zh_TW]=將本電腦上正在運行的系統做成現場版映像檔
 Exec=su-to-root -X -c mx-snapshot
 Terminal=false
