--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,7 @@ override_dh_auto_clean:
 
 override_dh_auto_build:
 	lrelease src.pro
+	head -n1 debian/changelog | sed -e "s/.*(\([^(]*\)).*/#define VERSION \"\1\"/" > version.h
 	dh_auto_build
 
 # Uncomment if building in Virtual Box
