Translation refresh for MX-19

--- a/mx-snapshot.desktop
+++ b/mx-snapshot.desktop
@@ -7,7 +7,7 @@ Name[bg]=MX Snapshot
 Name[ca]=MX Snapshot
 Name[cs]=MX Snapshot
 Name[da]=MX Øjebliksbillede
-Name[de]=MX Snapshot
+Name[de]=MX Schnappschuss
 Name[el]=MX Snapshot
 Name[es]=MX Snapshot
 Name[et]=MX Snapshot
@@ -80,7 +80,7 @@ Comment[pt]=Criar imagem ISO do sistema em execução; quando instalada num meio
 Comment[ro]=Create a live iso snapshot of your running system.
 Comment[ru]=Создание снимка системы в Live-CD из работающей системы.
 Comment[sk]=Vytvorte si LIVE ISO snapshot Vášho operačného systému
-Comment[sl]=Create a live iso snapshot of your running system.
+Comment[sl]=Ustvari živ iso posnetek zagnanega sistema
 Comment[sq]=Create a live iso snapshot of your running system.
 Comment[sr]=Create a live iso snapshot of your running system.
 Comment[sv]=Skapa ett live iso snapshot av det system du kör.
