added compression settings dropdown; removed 'edit configuration file' button

--- a/mx-snapshot.conf
+++ b/mx-snapshot.conf
@@ -30,16 +30,20 @@ stamp=datetime
 snapshot_basename=snapshot
 
 ; Change to "no" if you don't want the md5sum file created with the iso.
-; (Default is "yes")
+; Default is "yes"
 make_md5sum=yes
 
 ; Change to "no" if you want a plain iso image instead of isohybrid.
-; (Default is "yes")
+; Default is "yes"
 make_isohybrid=yes
 
-; Comment out below to use gz compression. Faster, but iso size is bigger.
-; To make resulting iso even smaller use "-comp xz -b 262144"
-mksq_opt=-comp xz
+; Compression algorithm
+; Default is "lz4". Allowed values in order of speed-size tradeoff: lz4, lzo, gzip, xz  
+compression=lz4
+
+; Additional argulents to be pass to the mksquash options
+; For exmaple you can add  "-b 262144" when you use xz compression for smaller, but slower builds
+mksq_opt=
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Custom boot menu and help files section. 
