--- a/debian/rules
+++ b/debian/rules
@@ -16,4 +16,4 @@ override_dh_shlibdeps:
 	dh_shlibdeps -- -xvirtualbox-guest-x11 --ignore-missing-info
 
 %:
-	dh $@ --parallel 
+	dh $@ --no-automatic-dbgsym --parallel 
